--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="I’m Ruvini Rangathara. I’m 23 years old
+            young and highly active enthusiast. I’m a developer
+            living in Panadura, Sri Lanka. I’m currently studying
+            in Institute Software Engineering (IJSE) and also I’m
+            working at IJSE as a trainee instructor.
+            My interests are in Back End Engineering.
+            I have a good knowledge of Java.">
+    <meta name="keywords" content="Ruvini Rangathara, portfolio, website, light theme website">
+    <meta name="author" content="Ruvini Rangathara">
+
+
     <title>Ruvini Rangathara</title>
 
     <link href="assert/bootstrap/css/bootstrap.css" rel="stylesheet">
