add view port meta data

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             I have a good knowledge of Java.">
     <meta name="keywords" content="Ruvini Rangathara, portfolio, website, light theme website">
     <meta name="author" content="Ruvini Rangathara">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
     <title>Ruvini Rangathara</title>
@@ -49,7 +50,7 @@
             padding: 0;
             /*opacity: 80%;*/
             /*background-color: white;*/
-
+            overflow-x: hidden;
         }
 
         ::-webkit-scrollbar {
