--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
 
         body {
             background-color: white;
-            /*background: url("http://neilcarpenter.com/demos/asfalt.png") repeat;*/
             padding: 0;
-            /*opacity: 80%;*/
-            /*background-color: white;*/
             overflow-x: hidden;
         }
 
@@ -90,6 +87,22 @@
         #footer_p {
             color: #FFA800;
             opacity: 100%;
+        }
+
+        @media all and (max-width: 720px) {
+            .section_head{
+                font-size: 30px;
+            }
+
+
+            #my_name{
+                word-spacing: 1px;
+                font-size: 18px;
+            }
+
+            #n{
+                width: 100%;
+            }
         }
 
     </style>
@@ -821,7 +834,7 @@
                 <i class="fa fa-user"></i>
                 &nbsp;&nbsp; <span
                     href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d940.1337510981917!2d79.93652331839829!3d6.709118472162058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae248913b6ffddd%3A0x73b2e88c4294184f!2sMahavila%2C%20Panadura!5e0!3m2!1sen!2slk!4v1687585119948!5m2!1sen!2slk">S.A. Ruvini Rangathara</span><br>
-                <i class="fa fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:ruvinisubhasinghe200009@gmail.com">ruvinisubhasinghe200009@gmail.com</a><br>
+                <i class="fa fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:ruvinisubhasinghe200009@gmail.com" id="contact_email">ruvinisubhasinghe200009@gmail.com</a><br>
                 <i class="fa fa-phone"></i>&nbsp;&nbsp;<a href="tel:+94786628489">+94786628489</a><br>
                 <i class="fa fa-map-marker"></i>&nbsp;&nbsp;&nbsp; <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d940.1337510981917!2d79.93652331839829!3d6.709118472162058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae248913b6ffddd%3A0x73b2e88c4294184f!2sMahavila%2C%20Panadura!5e0!3m2!1sen!2slk!4v1687585119948!5m2!1sen!2slk" target="_blank">No : 48, Miriswaththa, Mahavila, Panadura</a></p>
 
