Add pos system assignment

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             coding and software development.</p>
 
         <div class="vn-red" style="text-align: center;">
-            <a download href="assert/pdf/PRF Interview Questions.pdf" id="cv_btn">DOWNLOAD CV</a>
+            <a download href="assert/pdf/my_cv.pdf" id="cv_btn">DOWNLOAD CV</a>
         </div>
         <br>
 
@@ -594,9 +594,10 @@
                     <h2><span class="small">Web Application</span> POS System</h2>
                 </div>
                 <div class="body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta reiciendis deserunt doloribus
-                        consequatur, laudantium odio dolorum laboriosam.</p>
-                    <img alt="Graphic" src="http://placehold.it/1000x500">
+                    <p>Simple POS System with Item management, Customer management, Order management.</p>
+                    <p><a href="assignment/POS/SPA/index.html">See here</a>
+                    </p>
+                    <img alt="Graphic" src="assert/image/POS.jpg">
                 </div>
             </div>
 
