Change some features in pos

--- a/assignment/POS/SPA/index.html
+++ b/assignment/POS/SPA/index.html
@@ -151,51 +151,51 @@
 
                 </section>
 
-                <!--  Customer,Item,Order and Order detail Quick links With image-->
-                <!--            <section class="container-fluid">-->
-                <!--                <div class="row mb-1 justify-content-between">-->
-                <!--                    <div class="size col-lg-4">-->
-                <!--                        <div class="card">-->
-                <!--                            <img alt="Customer" class="card-img-top"-->
-                <!--                                 src="https://img.freepik.com/free-photo/smiling-middle-aged-couple-shopping-carrying-paper-bags-walking-city-street_1262-13021.jpg?w=1800&t=st=1665641416~exp=1665642016~hmac=d089531060e5d7e516b195c3862701ff9d084c1567e6493e3b8582a68a3d50da"/>-->
-                <!--                            <div class="card-body">-->
-                <!--                                <a class="btn btn-success btn-rounded" href="#" id="linkCustomer2" type="button">Customer</a>-->
-                <!--                            </div>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
+                  Customer,Item,Order and Order detail Quick links With image
+                            <section class="container-fluid">
+                                <div class="row mb-1 justify-content-between">
+                                    <div class="size col-lg-4">
+                                        <div class="card">
+                                            <img alt="Customer" class="card-img-top"
+                                                 src="https://img.freepik.com/free-photo/smiling-middle-aged-couple-shopping-carrying-paper-bags-walking-city-street_1262-13021.jpg?w=1800&t=st=1665641416~exp=1665642016~hmac=d089531060e5d7e516b195c3862701ff9d084c1567e6493e3b8582a68a3d50da"/>
+                                            <div class="card-body">
+                                                <a class="btn btn-success btn-rounded" href="#" id="linkCustomer2" type="button">Customer</a>
+                                            </div>
+                                        </div>
+                                    </div>
 
-                <!--                    <div class="size col-lg-4">-->
-                <!--                        <div class="card">-->
-                <!--                            <img alt="Item" class="card-img-top"-->
-                <!--                                 src="https://img.freepik.com/free-photo/zero-waste-bag-food_23-2149015849.jpg?w=1800&t=st=1665641237~exp=1665641837~hmac=25c69727c31be9ff22a5ca6534588b379e92cc589ad5d54769eda9cd9ada91f4"/>-->
-                <!--                            <div class="card-body">-->
-                <!--                                <a class="btn btn-success btn-rounded" href="#" id="linkItem2" type="button">Item</a>-->
-                <!--                            </div>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
+                                    <div class="size col-lg-4">
+                                        <div class="card">
+                                            <img alt="Item" class="card-img-top"
+                                                 src="https://img.freepik.com/free-photo/zero-waste-bag-food_23-2149015849.jpg?w=1800&t=st=1665641237~exp=1665641837~hmac=25c69727c31be9ff22a5ca6534588b379e92cc589ad5d54769eda9cd9ada91f4"/>
+                                            <div class="card-body">
+                                                <a class="btn btn-success btn-rounded" href="#" id="linkItem2" type="button">Item</a>
+                                            </div>
+                                        </div>
+                                    </div>
 
-                <!--                    <div class="size col-lg-4">-->
-                <!--                        <div class="card">-->
-                <!--                            <img alt="Order" class="card-img-top"-->
-                <!--                                 src="https://img.freepik.com/free-photo/import-export-shipment-truck-graphic-concept_53876-124866.jpg?w=1800&t=st=1665639924~exp=1665640524~hmac=054a5f3c8df180ab0ab2e71886ee3496009d9f01f08c80cca912c0f839f5f64e"/>-->
-                <!--                            <div class="card-body">-->
-                <!--                                <a class="btn btn-success btn-rounded" href="#" id="linkOrder2" type="button">Order</a>-->
-                <!--                            </div>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
+                                    <div class="size col-lg-4">
+                                        <div class="card">
+                                            <img alt="Order" class="card-img-top"
+                                                 src="https://img.freepik.com/free-photo/import-export-shipment-truck-graphic-concept_53876-124866.jpg?w=1800&t=st=1665639924~exp=1665640524~hmac=054a5f3c8df180ab0ab2e71886ee3496009d9f01f08c80cca912c0f839f5f64e"/>
+                                            <div class="card-body">
+                                                <a class="btn btn-success btn-rounded" href="#" id="linkOrder2" type="button">Order</a>
+                                            </div>
+                                        </div>
+                                    </div>
 
-                <!--                    <div class="size col-lg-4">-->
-                <!--                        <div class="card">-->
-                <!--                            <img alt="OrderDetails" class="card-img-top"-->
-                <!--                                 src="https://img.freepik.com/free-photo/order-summary-payslip-purchase-order-form-concept_53876-137616.jpg?w=1800&t=st=1665639636~exp=1665640236~hmac=b15ff9685fb47f5b4651002cf5bc02799db10b3d7ad1fac3b7ded0892497fa3e"/>-->
-                <!--                            <div class="card-body">-->
-                <!--                                <a class="btn btn-success btn-rounded" href="#" id="linkOrderDetails2" type="button">Order-->
-                <!--                                    Details</a>-->
-                <!--                            </div>-->
-                <!--                        </div>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-                <!--            </section>-->
+                                    <div class="size col-lg-4">
+                                        <div class="card">
+                                            <img alt="OrderDetails" class="card-img-top"
+                                                 src="https://img.freepik.com/free-photo/order-summary-payslip-purchase-order-form-concept_53876-137616.jpg?w=1800&t=st=1665639636~exp=1665640236~hmac=b15ff9685fb47f5b4651002cf5bc02799db10b3d7ad1fac3b7ded0892497fa3e"/>
+                                            <div class="card-body">
+                                                <a class="btn btn-success btn-rounded" href="#" id="linkOrderDetails2" type="button">Order
+                                                    Details</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
             </main>
             <!--end Dashboard-->
         </section>
