Add assignment 8 case 1

--- a/index.html
+++ b/index.html
@@ -726,10 +726,17 @@
          data-aos-duration="2000">
         <div class="content">
             <h2 class="title">Assignment 11</h2>
-            <p class="copy">Knight Rider</p>
-            <a class="btn"
+            <p class="copy">Knight Rider & Men Animation</p>
+
+            <a id="assign8case2"class="btn"
                href="assignment/CSS11 - Knight Rider/assignment_9_with_jQuery.html"
                target="_blank">View</a>
+
+            <a id="assign8case1" class="btn"
+               href="assignment/pdf08/assignment_8_case_1.html"
+               target="_blank">View</a>
+
+
         </div>
     </div>
 
